--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<
-body>
+<body>
   <h1>My First Cloud Deployment</h1>
   <h2>Hello, my name is Dexyl P. Cadano</h2>
   <img src="image.png" width="200"/>
   <p>This is my first deployed website!</p>
 </body>
 </html>
+
